fix: use media query for dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,20 +3,24 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: theme(colors.slate.50);
-    --foreground: theme(colors.slate.950);
-    --foreground-secondary: theme(colors.slate.800);
-    --muted: theme(colors.gray.600);
-    --muted-secondary: theme(colors.gray.800);
+  @media (prefers-color-scheme: light) {
+    :root {
+      --background: theme(colors.slate.50);
+      --foreground: theme(colors.slate.950);
+      --foreground-secondary: theme(colors.slate.800);
+      --muted: theme(colors.gray.600);
+      --muted-secondary: theme(colors.gray.800);
+    }
   }
 
-  [data-mode="dark"] {
-    --background: theme(colors.slate.950);
-    --foreground: theme(colors.slate.50);
-    --foreground-secondary: theme(colors.slate.200);
-    --muted: theme(colors.gray.400);
-    --muted-secondary: theme(colors.gray.200);
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --background: theme(colors.slate.950);
+      --foreground: theme(colors.slate.50);
+      --foreground-secondary: theme(colors.slate.200);
+      --muted: theme(colors.gray.400);
+      --muted-secondary: theme(colors.gray.200);
+    }
   }
 }
 
@@ -35,27 +39,9 @@
     font-display: swap;
     src: url(/assets/fonts/JosefinSans-Italic-VariableFont_wght.woff2)
       format("woff2");
-    unicode-range:
-      U+0000-00FF,
-      U+0131,
-      U+0152-0153,
-      U+02BB-02BC,
-      U+02C6,
-      U+02DA,
-      U+02DC,
-      U+0304,
-      U+0308,
-      U+0329,
-      U+2000-206F,
-      U+2074,
-      U+20AC,
-      U+2122,
-      U+2191,
-      U+2193,
-      U+2212,
-      U+2215,
-      U+FEFF,
-      U+FFFD;
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+      U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
+      U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
   /* latin */
   @font-face {
@@ -64,27 +50,9 @@
     font-weight: 100 700;
     font-display: swap;
     src: url(/assets/fonts/JosefinSans-VariableFont_wght.woff2) format("woff2");
-    unicode-range:
-      U+0000-00FF,
-      U+0131,
-      U+0152-0153,
-      U+02BB-02BC,
-      U+02C6,
-      U+02DA,
-      U+02DC,
-      U+0304,
-      U+0308,
-      U+0329,
-      U+2000-206F,
-      U+2074,
-      U+20AC,
-      U+2122,
-      U+2191,
-      U+2193,
-      U+2212,
-      U+2215,
-      U+FEFF,
-      U+FFFD;
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+      U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
+      U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 }
 
